--- a/app/views/overviews/index.html.erb
+++ b/app/views/overviews/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Overviews#index</h1>
 <p>Find me in app/views/overviews/index.html.erb</p>
 
-<%= form_tag("/intiate", method: "post") do %>
+<%= form_tag("/initiate", method: "post") do %>
 	<p>
 		<%= radio_button_tag :function, 'pulse' %> Pulse
 	</p>
