Added ability to upload a file and place it onto the server. Also added accounts

--- a/app/views/overviews/login.html.erb
+++ b/app/views/overviews/login.html.erb
@@ -1,2 +1,8 @@
 <h1>Overviews#login</h1>
 <p>Find me in app/views/overviews/login.html.erb</p>
+<%= form_tag("/checkCreds", method: "post") do %>
+	<% @accounts.each do |a| %>
+		<%= radio_button_tag :name, a.name %> <%= a.name %>
+	<% end %>
+	<%= submit_tag("Login") %>
+<% end %>
