--- a/app/views/overviews/index.html.erb
+++ b/app/views/overviews/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Overviews#index</h1>
 <p>Find me in app/views/overviews/index.html.erb</p>
 
+<p><%= link_to "Sign Sound", new_file_path %></p>
+
 <%= form_tag("/initiate", method: "post") do %>
 	<p>
 		<%= radio_button_tag :function, 'pulse' %> Pulse
