--- a/app/views/overviews/index.html.erb
+++ b/app/views/overviews/index.html.erb
@@ -1,17 +1,25 @@
 <h1>Overviews#index</h1>
 <p>Find me in app/views/overviews/index.html.erb</p>
 
-<p><%= link_to "Sign Sound", new_file_path %></p>
+<p><%= link_to "New Sound", new_file_path %></p>
 
 <%= form_tag("/initiate", method: "post") do %>
+	<% iterator = 0 %>
+	<% while iterator < @interfaces_amount do %>	
+	
+	<%= iterator %>
 	<p>
-		<%= radio_button_tag :function, 'pulse' %> Pulse
+		<input id="function<%= iterator %>_pulse" name="function<%= iterator %>_pulse" type="radio" value="{<%= iterator %>, pulse}" /> Pulse <br>
 	</p>
 
 	<p>
-		<%= radio_button_tag :function, 'high' %> High
+		<input id="function<%= iterator %>_high" name="function<%= iterator %>_high" type="radio" value="{<%= iterator %>, high}" /> High <br>
 	</p>
-	
+	<hr>
+
+	<% iterator += 1 %>
+	<% end %>
+
 	<%= submit_tag("Go") %>
 
 <% end %>
